# Delta

./: .gitignore  DeltaAI家教_开源组件驱动开发流程文档_v1.2_增量版.md  DeltaAI家教_质量保障与AI自动化开发增量文档_v1.3.md  docker-compose.yml  setup-logto.sh  start-all.sh  start-local.sh
.github/workflows/: zhixueban-ci.yml
app/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
app/src/: App.tsx
backend/: .env.example  Dockerfile  pyproject.toml  start.sh
backend/app/: main.py
backend/app/api/: __init__.py  agents.py  auth.py  billing.py  chat.py  classroom.py  conversations.py  exam_engine.py  exams.py  knowledge.py  memory_books.py  ocr.py  parent.py  rag.py  reports.py  skills.py  speaking.py  tutor.py  voice.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  memory.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  agent_dispatcher.py  ai_tutor.py  bifrost_gateway.py  billing_service.py  knowledge_extractor.py  knowledge_service.py  logto_service.py  memory_engine.py  ocr_service.py  rag_service.py  security_service.py  sm2_scheduler.py  study_tracker.py  usage_limiter.py  voice_service.py
backend/app/skills/: __init__.py  base.py  classroom_skill.py  exam_skill.py  oral_skill.py  parent_skill.py  qa_skill.py  registry.py  study_report_skill.py  textbook_skill.py
backend/data/knowledge/: core_subjects.json  extra_subjects.json
backend/scripts/: seed_full_subjects.py  seed_knowledge.py  seed_unified.py
docs/: 515.md  AI家教项目开发者文档_Developer_Documentation.md  DeltaAI家教_开源组件驱动开发流程文档_v1.1.md  会话记录_2026-05-14_Docker启动.md  快速启动指南_Quick_Start.md  重启后恢复指南_Resume_After_Reboot.md
tests/: promptfooconfig.yaml  test_chromadb_rag.py
(+25 files in other folders)
