[project]
name = "delta-backend"
version = "0.1.0"
description = "Delta AI Tutor Backend - Open-source component driven"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "openai>=1.60.0",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.14",
    "langgraph>=0.2.60",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "pillow>=11.1.0",
    "chromadb>=0.5.0",
    "edge-tts>=7.0.0",
]

[project.optional-dependencies]
ocr = [
    "rapidocr-onnxruntime>=1.3.0",
    "paddleocr>=2.9.0",
    "paddlepaddle>=3.0.0b1",
]
voice = [
    "pipecat-ai>=0.0.60",
    "funasr>=1.1.0",
    "faster-whisper>=1.1.0",
    "kokoro>=0.0.4",
]
billing = [
    "lago-python-client>=3.0.0",
]
quality = [
    "deepeval>=2.0.0",
    "promptfoo>=0.90.0",
    "ragas>=0.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
